fixed font-size title in carousel on max-width 599px, fixed padding top and bottom product-wrap, fixed position text under slider on max-width 991px,  did more margin-top for btn-radius, did more margin-bottom for choose-size, finished all project

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1077,6 +1077,12 @@ footer {
     }
 }
 
+@media (max-width: 599px) {
+    .item-carousel-description .title {
+        font-size: 48px;
+    }
+}
+
 @media (max-width: 479px) {
     .sale-carousel {
         min-height: 320px;
@@ -1364,6 +1370,10 @@ footer {
 }
 
 @media (max-width: 479px) {
+    .product-wrap {
+        padding: 20px 0;
+    }
+
     .related-products .title {
         font-size: 28px;
     }
@@ -1439,6 +1449,17 @@ footer {
     margin-right: -92px;
 }
 
+@media (max-width: 599px) {
+    .order-info .choose-size {
+        margin-bottom: 10px;
+    }
+
+    .order-info .radio-list-btn {
+        padding-right: 0;
+        border-right: none;
+    }
+}
+
 .order-now {
     padding-top: 35px;
 }
@@ -1451,12 +1472,6 @@ footer {
 
 .order ul li + li {
     margin-left: 28px;
-}
-
-@media (max-width: 991px) {
-    .product-description .product-description-text {
-        text-align: center;
-    }
 }
 
 @media (max-width: 599px) {
@@ -1490,7 +1505,7 @@ footer {
 
     .btn-radius {
         margin: 0 auto;
-        margin-top: 10px;
+        margin-top: 20px;
     }
 }
 
