--- a/src/css/style.css
+++ b/src/css/style.css
@@ -975,6 +975,12 @@ footer {
     }
 }
 
+@media (max-width: 599px) {
+    .item-carousel-description .title {
+        font-size: 48px;
+    }
+}
+
 @media (max-width: 479px) {
     .sale-carousel {
         min-height: 320px;
@@ -1226,6 +1232,10 @@ footer {
 }
 
 @media (max-width: 479px) {
+    .product-wrap {
+        padding: 20px 0;
+    }
+
     .related-products .title {
         font-size: 28px;
     }
@@ -1298,6 +1308,17 @@ footer {
     margin-right: -92px;
 }
 
+@media (max-width: 599px) {
+    .order-info .choose-size {
+        margin-bottom: 10px;
+    }
+
+    .order-info .radio-list-btn {
+        padding-right: 0;
+        border-right: none;
+    }
+}
+
 .order-now {
     padding-top: 35px;
 }
@@ -1310,12 +1331,6 @@ footer {
 
 .order ul li + li {
     margin-left: 28px;
-}
-
-@media (max-width: 991px) {
-    .product-description .product-description-text {
-        text-align: center;
-    }
 }
 
 @media (max-width: 599px) {
@@ -1340,7 +1355,7 @@ footer {
 
     .btn-radius {
         margin: 0 auto;
-        margin-top: 10px;
+        margin-top: 20px;
     }
 }
 
